# phos

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  angular.json  chromedriverlog.txt  decorate-angular-cli.js  docker-compose.yml  migrations.json  nx.json  package-lock.json  package.json  pull_request_template.md  sonar-project.properties  tsconfig.base.json  tsconfig.json  tslint.json
.github/: dependabot.yml
.run/: api_migrations-run.run.xml  api_serve.run.xml  build_all.run.xml  website_serve.run.xml  website_test.run.xml
Front-End/: .eslintrc.json  .gitignore  Dockerfile  angular.json  cypress.json  forge.config.js  karma.conf.js  main.js  main.ts  package-lock.json  (+7 more)
arduino/angulon_ledstrip/: CMakeLists.txt  platformio.ini
arduino/angulon_ledstrip/src/: Angulon.cpp  Angulon.h  main.cpp
arduino/angulon_ledstrip/src/connections/OTA/: OTA.cpp  OTA.h
arduino/angulon_ledstrip/src/connections/configuration/: ConfigurationManager.cpp  ConfigurationManager.h  LedstripConfiguration.h  SystemConfiguration.h
arduino/angulon_ledstrip/src/connections/websocket/: Websocket.cpp  Websocket.h
arduino/angulon_ledstrip/src/hardware/: Button.cpp  Button.h
arduino/angulon_ledstrip/src/hardware/button/: Button.cpp  Button.h
arduino/angulon_ledstrip/src/hardware/led/: Led.cpp  Led.h
arduino/angulon_ledstrip/src/hardware/ledstrip/: Ledstrip.cpp  Ledstrip.h
arduino/angulon_ledstrip/src/utils/: Logger.cpp  Logger.h
arduino/angulon_ledstrip/src/utils/logger/: Logger.cpp  Logger.h
arduino/angulon_ledstrip/src/utils/state/: State.cpp  State.h
(+697 files in other folders)
